Calculo de Dietas

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     
     <div class="container py-4">
-        <form>
+        <form class="mb-3">
             <div class="mb-3">
                 <label for="genero" class="form-label">Gênero</label>
                 <select class="form-select" id="genero">
