--- a/sobre.html
+++ b/sobre.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white mb-3 border">
             <div class="container">
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="/calculadora-tdee">
                     <h1>Calculadora TDEE</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,19 +23,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Início</a>
+                            <a class="nav-link active" aria-current="page" href="/calculadora-tdee">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/o-que-e-tdee.html">O que é TDEE</a>
+                            <a class="nav-link" href="/calculadora-tdee/o-que-e-tdee.html">O que é TDEE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/o-que-e-imc.html">O que é IMC</a>
+                            <a class="nav-link" href="/calculadora-tdee/o-que-e-imc.html">O que é IMC</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/sobre.html">Sobre</a>
+                            <a class="nav-link" href="/calculadora-tdee/sobre.html">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contato.html">Contato</a>
+                            <a class="nav-link" href="/calculadora-tdee/contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
